@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.60 2005/02/01 18:56:57 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.61 2005/02/02 05:06:11 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   1 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
-  Changed tty8 output to a fifo. Minor GLIStorageDevice fix thanks to BenUrban
+  Changed tty8 output to a fifo. Minor GLIStorageDevice fix thanks to BenUrban.
+  Undo change with fix.
 
   31 Jan 2005; Preston Cody <codeman@gentoo.org>
   more updates to TODO list.  hopefully we'll soon start removing items instead
